# xingapi_python

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
src/: xing.py
src/com/: XAQuery.py  XASession.py
src/util/: deco.py  finder.py  get_credential.py  logger.py  parser.py  secrets.py
tests/: test_login.py  test_xasession.py
