[tool.poetry]
name = "xingapi_python"
version = "0.1.0"
description = ""
authors = ["0xF4D3C0D3 <dongho971220@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.1.3"
black = "^19.10b0"
pytest = "^5.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
